tests/baselines/reference/parserAssignmentExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parserAssignmentExpression1.ts(1,2): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/parser/ecmascript5/Expressions/parserAssignmentExpression1.ts(1,11): error TS2304: Cannot find name 'bar'.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parserAssignmentExpression1.ts (2 errors) ====
    (foo()) = bar;
     ~~~
!!! error TS2304: Cannot find name 'foo'.
              ~~~
!!! error TS2304: Cannot find name 'bar'.